kubernetes/lhr1/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.lhr1-k.jakerob.pro`)
      kind: Rule
      services:
        - name: whoami
          port: 80
    - match: Host(`whoami.lhr1-k.jakerob.pro:30080`)
      kind: Rule
      services:
        - name: whoami
          port: 80
